Work with and keep symlink structure
Signed-off-by: Lehmann_Fabian <fabian.lehmann@informatik.hu-berlin.de>